--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ twitter_username: Jayanth
 github_username:  Jayanth49
 
 # Build settings
-# theme: minima
-# plugins:
-#   - jekyll-feed
-remote_theme: pages-themes/midnight@v0.2.0
+theme: minima
+plugins:
+  - jekyll-feed
+# remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 # Exclude from processing.
