--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,12 @@ github_username:  Jayanth49
 author: Jayanth
 # title-logo: /images/title_logo.jiff
 # Build settings
-theme: minima
+# theme: minima
+# plugins:
+#   - jekyll-feed
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
-  - jekyll-feed
-# remote_theme: pages-themes/midnight@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-them
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
