--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ author: Jayanth
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-remote-theme
+  - jekyll-feed
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
