--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Place for Madness
 email: jayanth9969@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- This is the place where madness defeats all other stuffs.
+ This is the place where i will notedown important things and my favorite projects.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://jayanth49.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Jayanth
